Updated the margin of card containers to give smaller screens more space at the bottom of the page so element overlap stops

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -29,3 +29,7 @@ $gear3-theme: mat.m2-define-light-theme($gear3-primary, $gear3-accent, $gear3-wa
     white-space: normal !important;
     word-wrap: normal  !important;
 }
+
+.card {
+    margin-bottom: 5rem;
+  }
